documentation: fixed intro buttons look on mobile devices

--- a/documentation/src/pages/index.module.css
+++ b/documentation/src/pages/index.module.css
@@ -20,10 +20,10 @@
   display: flex;
   gap: 10px;
   justify-content: center;
-  width: 60%;
-  margin: 0 auto;
+  flex-wrap: wrap;
 }
 
 .buttonIntro {
-  width: inherit;
+  flex-shrink: 0;
+  flex-basis: 300px;
 }
